--- a/src/views/index.html
+++ b/src/views/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <img src="/static/PYh.gif" alt="cat" id="cat">
+
     <div class="filters" id="filters">
         <button class="filter-item" data-filter="javascript">Javascript</button>
         <button class="filter-item" data-filter="css">CSS</button>
